Add browser and extension version numbers to export for debugging of exported settings submitted by users. It will be useful also in the future as the fileformat matures and changes, as it has many times over the years.

--- a/src/about.html
+++ b/src/about.html
@@ -63,7 +63,8 @@
         <li>Toolbar icon now changes with proxy use, just like version 6.x and earlier (patterns mode only). If there are no matches, a gray icon is displayed; discussed <a target="_blank" href="https://github.com/foxyproxy/firefox-extension/issues/38">here</a>.</li>
         <li>Logging improvements; log now displays unmatched URLs just like version 6.x and earlier. This makes it obvious which URLs you may want to write patterns for.</li>
         <li>UI Improvements</li>
-        <li>Performance improvements for authentication</li>          
+        <li>Performance improvements for authentication</li>
+        <li>Add browser and extension version numbers to export for debugging of exported settings submitted by users. It will be useful also in the future as the fileformat matures and changes, as it has many times over the years.</li>       
       </ul>      
       <h4>Version 7.3</h4>
       <ul>
