* Ensure new proxies are added to the top of the list when created * Remove migration code which seems to cause errors for some people; migration from old very versions now gone * Bugfixes introduced in last commit when importing exported settings that include browserVersion and foxyProxyVersion

--- a/src/about.html
+++ b/src/about.html
@@ -64,7 +64,9 @@
         <li>Logging improvements; log now displays unmatched URLs just like version 6.x and earlier. This makes it obvious which URLs you may want to write patterns for.</li>
         <li>UI Improvements</li>
         <li>Performance improvements for authentication</li>
-        <li>Add browser and extension version numbers to export for debugging of exported settings submitted by users. It will be useful also in the future as the fileformat matures and changes, as it has many times over the years.</li>       
+        <li>Add browser and extension version numbers to export for debugging of exported settings submitted by users. It will be useful also in the future as the fileformat matures and changes, as it has many times over the years.</li>
+        <li>Ensure new proxies are added to the top of the list when created</li>
+        <li>Remove migration code which seems to cause errors for some people; migration from very old versions now gone.</li>
       </ul>      
       <h4>Version 7.3</h4>
       <ul>
