Do not display pattern shortcuts (match all URLs, don't match localhost & intranet IPs) when editing a proxy setting, just like 6.x and earlier. Showing these created a lot of confusion for some users. Sorry!

--- a/src/proxy.html
+++ b/src/proxy.html
@@ -85,14 +85,14 @@
             </div>
           </div>
   
-          <div class="flex onOff notForBasic">
+          <div class="flex onOff notForBasic notForEdit">
             <label data-i18n="addWhitelist"></label>
             <div>
               <input type="checkbox" class="switch" id="whiteAll"><label for="whiteAll"></label>
             </div>
           </div>
   
-          <div class="flex onOff notForBasic">
+          <div class="flex onOff notForBasic notForEdit">
             <label><span data-i18n="noLocal"></span>
              <div class="tooltip"><i class="fa fa-info-circle" style="font-size: 1.2em;"></i><span class="tooltiptext" data-i18n="addBlacklistTip"></span></div></label>
   
