--- a/src/about.html
+++ b/src/about.html
@@ -67,6 +67,7 @@
         <li>Add browser and extension version numbers to export for debugging of exported settings submitted by users. It will be useful also in the future as the fileformat matures and changes, as it has many times over the years.</li>
         <li>Ensure new proxies are added to the top of the list when created</li>
         <li>Remove migration code which seems to cause errors for some people; migration from very old versions now gone.</li>
+        <li>Do not display pattern shortcuts (match all URLs, don't match localhost & intranet IPs) when editing a proxy setting, just like 6.x and earlier. Showing these created a lot of confusion for some users. Sorry!</li>
       </ul>      
       <h4>Version 7.3</h4>
       <ul>
