--- a/src/patterns.html
+++ b/src/patterns.html
@@ -39,6 +39,8 @@
       }
       #result { margin: 1em 0 0; }
       label[for="file"] { margin: 0; }
+      div.prime.warning { display: inline-block; }
+      #links { float: right; }
     </style>
   </head>
   <body>
@@ -57,12 +59,14 @@
 
     <!-- main -->
     <div class="prime main">
-			<div class="prime warning">
-				<span data-i18n="activeNote"></span><strong><span data-i18n="modePatterns"></span></strong>
-			</div>
 			<div>
-        <a href="/pattern-help.html" target="_blank"><span data-i18n="patternHelp"></span> <i class="fa fa-question-circle"></i></a> |
-        <a href="/pattern-tester.html" target="_blank"><span data-i18n="patternTester"></span> <i class="fa fa-flask"></i></a>
+        <div class="prime warning">
+  				<span data-i18n="activeNote.1"></span> <strong><span data-i18n="modePatterns"></span></strong>
+  			</div>
+        <span id="links">        
+          <a href="/pattern-help.html" target="_blank"><span data-i18n="patternHelp"></span> <i class="fa fa-question-circle"></i></a> |
+          <a href="/pattern-tester.html" target="_blank"><span data-i18n="patternTester"></span> <i class="fa fa-flask"></i></a>
+        </span>
       </div>			
 			
       <h3 data-i18n="whitePatterns"></h3>
