min Fx version is now 60 due to https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API/proxy/onRequest

--- a/src/about.html
+++ b/src/about.html
@@ -59,7 +59,7 @@
       <h3>Release Notes for Recent Releases</h3>
       <h4>Version 7.4</h4>
       <ul>
-        <li>Uses new proxy API now and works with Firefox Nighly; discussed <a target="_blank" href="https://github.com/foxyproxy/firefox-extension/issues/39">here</a>.</li>
+        <li>Uses new proxy API now and works with Firefox Nighly; discussed <a target="_blank" href="https://github.com/foxyproxy/firefox-extension/issues/39">here</a>. Minimum Firefox version is now 60.0.</li>
         <li>Toolbar icon now changes with proxy use, just like version 6.x and earlier (patterns mode only). If there are no matches, a gray icon is displayed; discussed <a target="_blank" href="https://github.com/foxyproxy/firefox-extension/issues/38">here</a>.</li>
         <li>Logging improvements; log now displays unmatched URLs just like version 6.x and earlier. This makes it obvious which URLs you may want to write patterns for.</li>
         <li>UI Improvements</li>
