* Show patterns buttons when adding Direct (no proxy) setting. * Fixed some minor UI bugs when using Direct (no proxy).

--- a/src/about.html
+++ b/src/about.html
@@ -79,6 +79,7 @@
          on pattern-related pages</div>
       </li>
       <li>Bug fixes when importing legacy foxyproxy.xml settings (FoxyProxy 4.x and earlier)</li>
+      <li>Show patterns buttons when adding Direct (no proxy) setting. Fixed some minor UI bugs when using Direct (no proxy).</li>
       </ul>      
       <h4>Version 7.3</h4>
       <ul>
