* Fixes so that FoxyProxy Basic can share the same codebase as FoxyProxy Standard again. Version number alignment: for the first time since FoxyProxy Basic   was introduced, it will share the same version number as FoxyProxy Standard. * Exported settings now include FoxyProxy edition &mdash; Standard or Basic. However, they are interchangeable. * Removed link to <a href="https://forums.getfoxyproxy.org/" target="_blank"><i class="fa fa-users"></i>Community Support Forums</a>.   We are shutting the forums down. People just don't use forums anymore; we only get spam there.   And have many other support chanels: email, ticket system, github, facebook, twitter, chat, etc. * Escape button works to close the current FoxyProxy window and return to the previous (if there is a previous). * Dialog box color changes for consistency

--- a/src/options.html
+++ b/src/options.html
@@ -48,7 +48,7 @@
   <body>
 
     <!-- header -->
-    <div class="prime header" data-i18n="options"></div>
+    <div class="prime header" data-i18n="optionsPage"></div>
 
 
     <!-- spinner -->
@@ -122,8 +122,8 @@
         <h3></h3>
         <div></div>
         <div style="text-align: right;">
-          <button type="button" class="flat" data-i18n="cancel"></button>&nbsp;
-          <button type="button" class="flat" data-i18n="ok"></button>
+          <button type="button" class="alert" data-i18n="cancel"></button>&nbsp;
+          <button type="submit" data-i18n="ok"></button>
         </div>
       </div>
     </div>
