--- a/src/about.html
+++ b/src/about.html
@@ -44,9 +44,8 @@
       <h3>Help</h3>
       <p>
         <a href="https://support.getfoxyproxy.org/" target="_blank"><i class="fa fa-question"></i>Open a Support Ticket </a><i>(no registration required)</i><br>
-        <a href="mailto:support@getfoxyproxy.org"><i class="fa fa-envelope-o"></i>Email Support</a><br>
-        <a href="https://forums.getfoxyproxy.org/" target="_blank"><i class="fa fa-users"></i>Community Support Forums</a><br>
-        <a href="/pattern-tester.html"><i class="fa fa-flask"></i>Pattern Test</a> &amp; <a href="/pattern-help.html"><i class="fa fa-question-circle"></i>Pattern Help</a> <i>(no internet connection required)</i><br>
+        <a href="mailto:support@getfoxyproxy.org"><i class="fa fa-envelope-o"></i>Email Support</a><br>           
+        <span class="notForBasic"><a href="/pattern-tester.html"><i class="fa fa-flask"></i>Pattern Test</a> &amp; <a href="/pattern-help.html"><i class="fa fa-question-circle"></i>Pattern Help</a> <i>(no internet connection required)</i><br></span>
         <a href="https://getfoxyproxy.org/geoip/" target="_blank"><i class="fa fa-globe"></i>What's my IP Address?</a>
       </p>
 
@@ -57,6 +56,18 @@
       <p>&mdash; <a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>Colorado, USA</p>
 
       <h3>Release Notes for Recent Releases</h3>
+      <h4>Version 7.4.1</h4>
+      <ul>
+        <li>Fixes so that FoxyProxy Basic can share the same codebase as FoxyProxy Standard again. Version number alignment: for the first time since FoxyProxy Basic
+          was introduced, it will share the same version number as FoxyProxy Standard.</li>
+        <li>Exported settings now include FoxyProxy edition &mdash; Standard or Basic. However, they are interchangeable.</li>
+        <li>Removed link to <a href="https://forums.getfoxyproxy.org/" target="_blank"><i class="fa fa-users"></i>Community Support Forums</a>.
+          We are shutting the forums down. People just don't use forums anymore; we only get spam there.
+          And have many other support chanels: email, ticket system, github, facebook, twitter, chat, etc.</li>
+        <li>Escape button works to close the current FoxyProxy window and return to the previous (if there is a previous).</li>
+        <li>Dialog box color changes for consistency</li>
+      </ul>
+      
       <h4>Version 7.4</h4>
       <ul>
         <li>Uses new proxy API now and works with Firefox Nighly; discussed <a target="_blank" href="https://github.com/foxyproxy/firefox-extension/issues/39">here</a>. Minimum Firefox version is now 60.0.</li>
@@ -93,12 +104,6 @@
         <li>Fix minor import bug when importing FoxyProxy settings for paid accounts.</li>
       </ul>
       
-      <h4>Version 7.1</h4>
-      <ul>
-        <li>Patterns bugfix for bug introduced in 7.0</li>
-        <li>Text changes in patterns window</li>
-      </ul>
-
     <div style="text-align: right;">
       <button type="button" class="button" data-i18n="back">&#x25c1; </button>
     </div>
