* Import optimizations and increase on import file size from 5 MB to 10 MB

--- a/src/about.html
+++ b/src/about.html
@@ -53,7 +53,7 @@
       <p>Please <a href="https://www.paypal.me/ericjung2/5.99" target="_blank">donate</a> or <a href="https://getfoxyproxy.org/order/" target="_blank">buy dedicated VPN/Proxy Servers</a> in over 100 countries (including such remote places like <a href="https://wikipedia.org/wiki/Réunion" target="_blank">Reunion Island</a>).</p>
       <p><strong>Thank you for using FoxyProxy!</strong></p>
       <img src="/images/ericjung.png" alt=""><br>
-      <p>&mdash; <a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>Colorado, USA</p>
+      <p>&mdash; <a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>Denver, Colorado, USA</p>
 
       <h3>Release Notes for Recent Releases</h3>
       <h4>Version 7.4.1</h4>
@@ -66,6 +66,7 @@
           And have many other support chanels: email, ticket system, github, facebook, twitter, chat, etc.</li>
         <li>Escape button works to close the current FoxyProxy window and return to the previous (if there is a previous).</li>
         <li>Dialog box color changes for consistency</li>
+        <li>Import optimizations and increase on import file size from 5 MB to 10 MB</li>
       </ul>
       
       <h4>Version 7.4</h4>
