* Show help text if no proxy settings are defined; hide all proxy selectors too including 'turn off'.

--- a/src/about.html
+++ b/src/about.html
@@ -67,6 +67,7 @@
         <li>Escape button works to close the current FoxyProxy window and return to the previous (if there is a previous).</li>
         <li>Dialog box color changes for consistency</li>
         <li>Import optimizations and increase on import file size from 5 MB to 10 MB</li>
+        <li>Show help text if no proxy settings are defined; hide all proxy selectors too including 'turn off'.</li>
       </ul>
       
       <h4>Version 7.4</h4>
