--- a/src/popup.html
+++ b/src/popup.html
@@ -43,7 +43,7 @@
     <div class="prime" style="margin: 0;">
 
 
-        <ul class="scroll">
+        <ul id="scroll" class="scroll">
           <li id="patterns" data-i18n="modePatterns"></li>
           
           <!-- template -->
