--- a/src/patterns.html
+++ b/src/patterns.html
@@ -62,10 +62,10 @@
         <div class="flex">
           <div class="prime warning small" style="flex: 1.5">
               <span data-i18n="activeNote.1"></span> <strong><span data-i18n="modePatterns"></span></strong>
-    			</div>
+          </div>
           <div style="text-align: right;">
             <div class="tooltip"><span data-i18n="patternCheatSheet" class="orangehover"></span> <i class="fa fa-info-circle"></i>
-              <span class="tooltiptext center">
+              <span class="tooltiptext center bottom">
                 <span class="monospace">bbc.co.uk</span> &mdash; exact domain only<br>
                 <span class="monospace">*.bbc.co.uk</span> &mdash; exact domain and all subdomains<br>
                 <span class="monospace">**.bbc.co.uk</span> &mdash; subdomains only, not bbc.co.uk
