* change i18n key name so it works in chrome, too * remove unneeded console log messages

--- a/src/patterns.html
+++ b/src/patterns.html
@@ -61,7 +61,7 @@
         
         <div class="flex">
           <div class="prime warning small" style="flex: 1.5">
-              <span data-i18n="activeNote.1"></span> <strong><span data-i18n="modePatterns"></span></strong>
+              <span data-i18n="activeNote"></span> <strong><span data-i18n="modePatterns"></span></strong>
     			</div>
           <div style="text-align: right;">
             <div class="tooltip"><span data-i18n="patternCheatSheet" class="orangehover"></span> <i class="fa fa-info-circle"></i>
