* When adding a new proxy, <strong>Add whitelist pattern to match all URLs</strong> is now on by default. Discussed <a href="https://github.com/foxyproxy/firefox-extension/issues/49" target="_blank">here</a>. * On patterns window, added button for <strong>Add whitelist pattern to match all URLs</strong> similar to the existing button <strong>Add black patterns to prevent this proxy being used for localhost & intranet/private IP addresses</strong>. * Patterns Cheat Sheet improvements &mdash; more examples and text explaining that blacklist patterns take precedence over whitelist patterns. * Change an i18n key name so it works in chrome, too (chrome does not allow periods in key names). * Remove unneeded console log messages. * Faster deletion of patterns (faster animation)

--- a/src/log.html
+++ b/src/log.html
@@ -75,11 +75,13 @@
           <thead>
             <tr>
               <th data-i18n="url"></th><th data-i18n="proxyTitle"></th><th data-i18n="color"></th>
-              <th data-i18n="proxyAddress"></th><th data-i18n="matchPattern"></th><th data-i18n="timestamp"></th>
+              <th data-i18n="proxyAddress"></th><th data-i18n="matchPattern"></th><th data-i18n="whiteBlack"></th>
+              <th data-i18n="timestamp"></th>
              </tr>
             <!-- template -->
             <tr class="template">
                <td><a href="" target="_blank"></a></td>
+               <td></td>
                <td></td>
                <td></td>
                <td></td>
