--- a/src/pattern-tester.html
+++ b/src/pattern-tester.html
@@ -25,7 +25,8 @@
       <div style="text-align: right;">
         
         <div class="tooltip"><span data-i18n="patternCheatSheet" class="orangehover"></span> <i class="fa fa-info-circle"></i>
-          <span class="tooltiptext center">
+          <span class="tooltiptext center bottom">
+            <span class="monospace">*</span> &mdash; all domains<br>
             <span class="monospace">bbc.co.uk</span> &mdash; exact domain only<br>
             <span class="monospace">*.bbc.co.uk</span> &mdash; exact domain and all subdomains<br>
             <span class="monospace">**.bbc.co.uk</span> &mdash; subdomains only, not bbc.co.uk
