--- a/src/proxy.html
+++ b/src/proxy.html
@@ -115,7 +115,7 @@
                 <label><span data-i18n="addWhitelist"></span>
                 <div class="tooltip"><i class="fa fa-info-circle"></i><span class="tooltiptext" data-i18n="addWhitelistTip"></span></div></label>
                 <div>
-                  <input type="checkbox" class="switch" id="whiteAll"><label for="whiteAll"></label>
+                  <input type="checkbox" class="switch" id="whiteAll" checked><label for="whiteAll"></label>
                 </div>
               </div>
       
