--- a/src/patterns.html
+++ b/src/patterns.html
@@ -40,6 +40,16 @@
       #result { margin: 1em 0 0; }
       label[for="file"] { margin: 0; }
       #links { float: right; }
+      hr { color: white; }
+      .addbuttoncontainer {
+        margin: 1em 0 2em;
+        text-align: center;
+        font-size: 0.9em;
+      }
+      .addbutton {
+        margin-left: 1em;
+        vertical-align: initial;
+      }
     </style>
   </head>
   <body>
@@ -64,14 +74,25 @@
               <span data-i18n="activeNote"></span> <strong><span data-i18n="modePatterns"></span></strong>
     			</div>
           <div style="text-align: right;">
-            <div class="tooltip"><span data-i18n="patternCheatSheet" class="orangehover"></span> <i class="fa fa-info-circle"></i>
-              <span class="tooltiptext bottom monospace" style="text-align: left; padding-left: 1rem">
-                <p><span>*</span> &mdash; all domains<br>
-                <span>bbc.co.uk</span> &mdash; exact domain only<br>
-                <span>*.bbc.co.uk</span> &mdash; exact domain and all subdomains<br>
-                <span>**.bbc.co.uk</span> &mdash; subdomains only, not bbc.co.uk</p>
-                <p><span>Black patterns take precedence over white patterns. For example, a black pattern of * means nothing will match, regardless of any white patterns.</span></p>
-              </span>
+            <div class="tooltip">
+              <span data-i18n="patternCheatSheet" class="fp-orange"></span>
+              <i class="fa fa-info-circle"></i>
+              <div class="tooltiptext bottom table">
+                <div class="tooltiptable">
+                  <div class="monospace">*</div>
+                  <div>all domains</div>
+                  <div class="monospace">*.bbc.co.uk</div>
+                  <div>exact domain and all subdomains</div>
+                  <div class="monospace">**.bbc.co.uk</div>
+                  <div>subdomains only (not bbc.co.uk)</div>
+                  <div class="monospace">bbc.co.uk</div>
+                  <div>exact domain only</div>
+                </div>
+                <hr>
+                <div class="tooltiptablefooter">
+                  <div>Black patterns take precedence over white patterns. For example, a black pattern of <span class="monospace">*</span> means nothing will match, regardless of any white patterns.</div>
+                </div>
+              </div>
             </div>
             |
             <a href="/pattern-tester.html" target="_blank"><span data-i18n="patternTester"></span> <i class="fa fa-flask"></i></a>
@@ -127,10 +148,10 @@
         </table>
       </div>
 
-      <div style="margin: 1em 0 2em; text-align: center; font-size: 0.9em;">
+      <div class="addbuttoncontainer">
         <span data-i18n="addWhitelist"></span>
         <div class="tooltip"><i class="fa fa-info-circle"></i><span class="tooltiptext center" data-i18n="addWhitelistTip"></span></div>
-        <button type="button" class="small" style="margin-left: 1em; vertical-align: initial;" data-i18n="add" data-white></button>
+        <button type="button" class="small addbutton" data-i18n="add" data-white></button>
       </div>
 
       <h3 data-i18n="blackPatterns"></h3>
@@ -149,10 +170,10 @@
       </div>
 
 
-      <div style="margin: 1em 0 2em; text-align: center; font-size: 0.9em;">
+      <div class="addbuttoncontainer">
         <span data-i18n="addBlacklist"></span>
         <div class="tooltip"><i class="fa fa-info-circle"></i><span class="tooltiptext center" data-i18n="addBlacklistTip"></span></div>
-        <button type="button" class="small" style="margin-left: 1em; vertical-align: initial;" data-i18n="add" data-black></button>
+        <button type="button" class="small addbutton" data-i18n="add" data-black></button>
       </div>
 
       <div class="flex">
