initial commit for import from list

--- a/src/options.html
+++ b/src/options.html
@@ -42,6 +42,9 @@
         font-size: 0.8em;
         width: 3em;
       }
+      .indent {
+        margin-left: 2em;
+      }
     </style>
 
   </head>
@@ -65,6 +68,7 @@
         <nav>
           <a data-i18n="add"><i class="fa fa-plus-circle"></i></a>
           <a data-i18n="import"><i class="fa fa-download"></i></a>
+          <a data-i18n="bulk" class="indent"><i class="fa fa-list"></i></a>
           <a data-i18n="export"><i class="fa fa-upload"></i></a>
           <a data-i18n="deleteAll"><i class="fa fa-trash"></i></a>
           <a data-i18n="deleteBrowserData"><i class="fa fa-eraser" style="margin-right: 0.1em;"></i></a>
