* more work towards bulk proxy import * define default color in utils.js instead of within proxy.js so it can be reused

--- a/src/import-bulk.html
+++ b/src/import-bulk.html
@@ -65,7 +65,7 @@
           <div class="tooltiptable">
             <h3>Examples</h3><br>
             <p class="monospace">proxy://78.205.12.1:1080<br>
-            socks5://johnconnor:hunterkiller@12.999.51.81:331&proxyDns=false<br>
+            socks5://johnconnor:hunterkiller@12.999.51.81:331&proxydns=false<br>
             socks4://johnconnor:hunterkiller@192.168.100.9:5192<br>
             ssl://johnconnor:hunterkiller@78.205.12.1:21?color=ff00bc&title=my%20special%20proxy</p>
           </div>
