Final bulk import work

--- a/src/import-bulk.html
+++ b/src/import-bulk.html
@@ -70,7 +70,7 @@
             ssl://johnconnor:hunterkiller@78.205.12.1:21?color=ff00bc&title=my%20special%20proxy</p>
           </div>
           <div class="tooltiptablefooter">
-            Click <a target="_blank" href="/import-bulk-help.html">here</a> for help.
+            Click <a target="_blank" href="https://github.com/foxyproxy/firefox-extension/wiki/Proxy---Bulk-Import-Format">here</a> for help.
           </div>
         </div>
       </div>
