remove inline style

--- a/src/import-proxy-list.html
+++ b/src/import-proxy-list.html
@@ -30,6 +30,9 @@
       .no-margin {
         margin: 0;
       }
+      #completeFormatTooltip {
+        width: 40rem;
+      }
     </style>
   </head>
   <body>
@@ -62,7 +65,7 @@
       <div class="tooltip">
         <span data-i18n="complete"></span>
         <i class="fa fa-info-circle"></i>
-        <div class="tooltiptext bottom table" style="width: 40rem">
+        <div id="completeFormatTooltip" class="tooltiptext bottom table">
           <div class="tooltiptable">
             <p data-i18n="completeFormat"></p>
             <h3 data-i18n="examples"></h3>
