fix release notes html

--- a/src/about.html
+++ b/src/about.html
@@ -59,13 +59,14 @@
       <h4>Version 7.5</h4>
       <ul>
         <li>Import Proxy Lists! Long requested feature. See <a href="https://github.com/foxyproxy/firefox-extension/wiki/Import-Proxy-List">help</a>.</li>
-        <li>Simplified Chinese translation -- Thanks <strong><a target="_blank" href="https://github.com/wsxy162">FeralMeow</a></strong></li>.
+        <li>Simplified Chinese translation -- Thanks <a target="_blank" href="https://github.com/wsxy162">FeralMeow</a>.</li>
         <li>Display <strong>Synchronize Settings</strong> for new installations when there are no proxies defined. Reported <a href="https://github.com/foxyproxy/firefox-extension/issues/83">here</a>.</li>
         <li>Fixed: <strong>Import Settings</strong> bug especially painful for people using the <a href="https://docs.aws.amazon.com/emr/latest/ManagementGuide/emr-connect-master-node-proxy.html">example at AWS</a>.
           Reported <a href="https://github.com/foxyproxy/firefox-extension/issues/76">here</a>. Also fixed bug whereby spinner did not hide after import settings errors.</li>
         <li>Minor security improvements -- do not accept embedded HTML/JS in other form fields</li>
         <li><strong>Turn Off (Use Firefox Settings)</strong> should be first in list. Reported <a href="https://github.com/foxyproxy/firefox-extension/issues/78">here</a>.</li>
         <li>Fixed: Firefox overflow menu displays wrong info for FoxyProxy. Reported <a href="https://github.com/foxyproxy/firefox-extension/issues/84">here</a>.</li>
+      </ul>
       <h4>Version 7.4.3</h4>
       <ul>
         <li>Fixed "log limit ignored" bug discussed <a href="https://github.com/foxyproxy/firefox-extension/issues/58" target="_blank">here</a>.</li>
