--- a/src/about.html
+++ b/src/about.html
@@ -56,6 +56,12 @@
       <p>&mdash; <a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>Denver, Colorado, USA</p>
 
       <h3>Release Notes for Recent Releases</h3>
+      <h4>Version 7.5.1</h4>
+      <ul>
+        <li>French translation -- Thanks <a target="_blank" href="https://github.com/samuikaze">samuikaze</a>.</li>
+        <li>Traditional Chinese translation -- Thanks <a target="_blank" href="https://github.com/Hugo-C">Hugo-C</a>.</li>
+        <li>Russian translation -- Thanks Vadim.</li>
+      </ul>
       <h4>Version 7.5</h4>
       <ul>
         <li>Import Proxy Lists! Long requested feature. See <a href="https://github.com/foxyproxy/firefox-extension/wiki/Import-Proxy-List">help</a>.</li>
@@ -66,11 +72,6 @@
         <li>Minor security improvements -- do not accept embedded HTML/JS in other form fields</li>
         <li><strong>Turn Off (Use Firefox Settings)</strong> should be first in list. Reported <a href="https://github.com/foxyproxy/firefox-extension/issues/78">here</a>.</li>
         <li>Fixed: Firefox overflow menu displays wrong info for FoxyProxy. Reported <a href="https://github.com/foxyproxy/firefox-extension/issues/84">here</a>.</li>
-      </ul>
-      <h4>Version 7.4.3</h4>
-      <ul>
-        <li>Fixed "log limit ignored" bug discussed <a href="https://github.com/foxyproxy/firefox-extension/issues/58" target="_blank">here</a>.</li>
-        <li>Fixed spelling errors. Patch submitted <a href="https://github.com/foxyproxy/firefox-extension/pull/53" target="_blank">here</a> by <a href="https://github.com/cheese1" target="_blank">cheese1</a>.</li>
       </ul>
     <div style="text-align: right;">
       <button type="button" class="button" data-i18n="back">&#x25c1; </button>
