issue #111: add warning when a pattern contains protocol/scheme release note updates

--- a/src/about.html
+++ b/src/about.html
@@ -56,6 +56,13 @@
       <p>&mdash; <a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>Denver, Colorado, USA</p>
 
       <h3>Release Notes for Recent Releases</h3>
+      <h4>Version 7.5.2</h4>
+      <ul>
+        <li>Warn user when a pattern includes http, https, etc.</li>
+        <li>Russian translation fixes</li>
+        <li>Improved i18n code abstraction</li>
+      </ul>
+
       <h4>Version 7.5.1</h4>
       <ul>
         <li>French translation -- Thanks <a target="_blank" href="https://github.com/samuikaze">samuikaze</a>.</li>
