remove 'mysterious lock' icon issue #117

--- a/src/about.html
+++ b/src/about.html
@@ -16,7 +16,6 @@
         margin-right: 0.4em;
         width: 1em;
       }
-      i.fa.fa-lock { color: #080; }
       li.sub { margin-left: 2em; list-style-type: circle; }
       li.sub + li:not(.sub) { margin-top: 1em; }
     </style>
@@ -61,6 +60,7 @@
         <li>Warn user when a pattern includes http, https, etc.</li>
         <li>Russian translation fixes</li>
         <li>Improved i18n code abstraction</li>
+        <li>Remove <a href="https://github.com/foxyproxy/firefox-extension/issues/117" target="_blank">'mysterious lock'</a> next to https/ssl/tls proxies</li>
       </ul>
 
       <h4>Version 7.5.1</h4>
