Support for websocket protocol matching

--- a/src/pattern-tester.html
+++ b/src/pattern-tester.html
@@ -75,6 +75,8 @@
             <option value="1">all</option>
             <option value="2">http</option>
             <option value="4">https</option>
+            <option value="8">ws</option>
+            <option value="16">wss</option>
           </select>
         </div>
       </div>
